manifests/stfc-techops/ci-dev/ci-dev-ska-db-oda.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: button-dev-ska-db-oda
spec: {}
status: {}
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-postgresql-hl
  namespace: "button-dev-ska-db-oda"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-11.6.6
    app.kubernetes.io/instance: test
    app.kubernetes.io/managed-by: Helm
    app: ska-db-oda
    app.kubernetes.io/component: primary
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: primary
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-postgresql
  namespace: "button-dev-ska-db-oda"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-11.6.6
    app.kubernetes.io/instance: test
    app.kubernetes.io/managed-by: Helm
    app: ska-db-oda
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: test
    app.kubernetes.io/component: primary
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/templates/pgadmin4.yaml
apiVersion: v1
kind: Service
metadata:
  name: ska-db-oda-pgadmine4-test
  namespace: button-dev-ska-db-oda
  labels:    
    app: ska-db-oda
    chart: ska-db-oda-0.2.1
    release: test
    heritage: Helm
    system: db
    subsystem: oda
    component: pgadmin4-oda

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 
      protocol: TCP
      name: 
  selector:    
    app: ska-db-oda
    chart: ska-db-oda-0.2.1
    release: test
    heritage: Helm
    system: db
    subsystem: oda
    component: pgadmin4-oda
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/templates/rest.yaml
apiVersion: v1
kind: Service
metadata:
  name: ska-db-oda-rest-test
  namespace: button-dev-ska-db-oda
  labels:    
    app: ska-db-oda
    chart: ska-db-oda-0.2.1
    release: test
    heritage: Helm
    system: db
    subsystem: oda
    component: rest
    function: database
    domain: operations
    intent: production
spec:
  selector:
    app: ska-db-oda
    component: rest
  ports:
  - protocol: TCP
    port: 5000
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/templates/pgadmin4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ska-db-oda-pgadmine4-test
  namespace: button-dev-ska-db-oda
  labels:    
    app: ska-db-oda
    chart: ska-db-oda-0.2.1
    release: test
    heritage: Helm
    system: db
    subsystem: oda
    component: pgadmin4-oda

spec:
  replicas: 1
  selector:
    matchLabels:      
      app: ska-db-oda
      chart: ska-db-oda-0.2.1
      release: test
      heritage: Helm
      system: db
      subsystem: oda
      component: pgadmin4-oda
  template:
    metadata:
      labels:        
        app: ska-db-oda
        chart: ska-db-oda-0.2.1
        release: test
        heritage: Helm
        system: db
        subsystem: oda
        component: pgadmin4-oda
    
    spec:
      volumes:
      - name: definitions
        secret:
          secretName: ska-db-oda-pgadmine4-test
          items:
          - key: servers.json
            path: servers.json
      containers:
        - name: pgadmin4
          image: "docker.io/dpage/pgadmin4:6.10"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
          - name: definitions
            mountPath: /pgadmin4/servers.json
            subPath: servers.json
          resources:
            {}
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test-postgresql
  namespace: "button-dev-ska-db-oda"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-11.6.6
    app.kubernetes.io/instance: test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
    app: ska-db-oda
  annotations:
spec:
  replicas: 1
  serviceName: test-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: test
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: test-postgresql
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-11.6.6
        app.kubernetes.io/instance: test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
        app: ska-db-oda
      annotations:
    spec:
      serviceAccountName: default
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: test
                    app.kubernetes.io/component: primary
                namespaces:
                  - "button-dev-ska-db-oda"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:14.3.0-debian-11-r3
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: custom-init-scripts
              mountPath: /docker-entrypoint-initdb.d/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: custom-init-scripts
          configMap:
            name: ska-db-oda-initdb
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteMany"
        resources:
          requests:
            storage: "12Gi"
        storageClassName: nfss1
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/templates/rest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ska-db-oda-rest-test
  namespace: button-dev-ska-db-oda
  labels:    
    app: ska-db-oda
    chart: ska-db-oda-0.2.1
    release: test
    heritage: Helm
    system: db
    subsystem: oda
    component: rest
    function: database
    domain: operations
    intent: production
spec:
  selector:
    matchLabels:
      app: ska-db-oda
      component: rest
  serviceName: rest-ska-db-oda-test
  replicas: 1
  template:
    metadata:
      labels:        
        app: ska-db-oda
        chart: ska-db-oda-0.2.1
        release: test
        heritage: Helm
        system: db
        subsystem: oda
        component: rest
        function: database
        domain: operations
        intent: production
    spec:

      containers:
      - name: oda-rest
        image: "artefact.skao.int/ska-db-oda:0.6.2"
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c", "SCRIPT_NAME=/button-dev-ska-db-oda gunicorn --chdir src --bind 0.0.0.0:5000 --logger-class=ska_db_oda.rest.wsgi.UniformLogger --log-level='debug' ska_db_oda.rest.wsgi:app"]
        ports:
          - name: oda-rest
            containerPort: 5000

        resources:
          null
---
# Source: ska-db-oda-umbrella/charts/ska-db-oda/templates/pgadmin4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ska-db-oda-pgadmine4-test
  namespace: button-dev-ska-db-oda
  labels:    
    app: ska-db-oda
    chart: ska-db-oda-0.2.1
    release: test
    heritage: Helm
    system: db
    subsystem: oda
    component: pgadmin4-oda

spec:
  rules:
    - http:
        paths:
          - path: /button-dev-ska-db-oda/pgadmin4
            pathType: Prefix
            backend:
              service:
                name: ska-db-oda-pgadmine4-test
                port:
                  number: 80
